Fixed message alignment

--- a/frontend/src/app.module.css
+++ b/frontend/src/app.module.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  background-color: #ffffff;
+  background-color: var(--white);
   justify-content: center;
   border-radius: 24px;
   margin-top: 12px;
