--- a/frontend/src/components/suggestions.module.css
+++ b/frontend/src/components/suggestions.module.css
@@ -22,7 +22,7 @@
   position: relative;
   align-items: stretch;
   width: 100%;
-  padding-bottom: 8px;
+  padding: 0px 2px 8px 2px;
 }
 
 .container > div {
@@ -34,7 +34,6 @@
   padding: 0;
   width: 300px;
   white-space: normal;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
   position: relative;
 }
 
@@ -103,4 +102,5 @@
   font-size: 12px;
   padding: 0;
   margin-top: 16px;
+  line-height: 22px;
 }
